@@ -639,11 +639,6 @@ function admin_apply_draft_changes_form_submit($form, $form_submit) {
   }
    
 
-  // Save the entire post to the log.
-  //$post_x_m_l = fp_array_to_xml("post",$_POST, true);
-  //$db->add_to_log("admin_perform_apply_draft_changes","begin",$post_x_m_l);
-
-
   // First, set maintenance mode...
   $db->set_maintenance_mode("1");
 
@@ -660,7 +655,6 @@ function admin_apply_draft_changes_form_submit($form, $form_submit) {
 
   foreach($table_array as $table_name) {
     $draft_table_name = "draft_$table_name";
-    //$db->add_to_log("admin_perform_apply_draft_changes","$table_name,$draft_table_name");
     // First, truncate existing...
     $query = "truncate table $table_name";
     $res = db_query($query);
@@ -678,7 +672,6 @@ function admin_apply_draft_changes_form_submit($form, $form_submit) {
   while($cur = db_fetch_array($res))
   {
     $instruction = trim($cur["instruction"]);
-    //$db2->add_to_log("admin_perform_apply_draft_changes",$instruction);
 
     $temp = explode(",",$instruction);
 
@@ -697,7 +690,6 @@ function admin_apply_draft_changes_form_submit($form, $form_submit) {
 
   // And we are done!  Set maintenance mode back to 0.
   $db->set_maintenance_mode("0");
-  //$db->add_to_log("admin_perform_apply_draft_changes","finished");
 
   // Send emails to notify programmers...
   $notify = variable_get("notify_apply_draft_changes_email_address", "");  
@@ -706,6 +698,8 @@ function admin_apply_draft_changes_form_submit($form, $form_submit) {
   }
   
   fp_add_message(t("Successfully updated the production database with draft changes.  Your changes are now live and visible on production for all users."));
+
+  watchdog("admin", "Draft changes applied.");
  
   
 }
