@@ -683,14 +683,14 @@ function system_handle_form_submit() {
   // which do not have values entered)
   form_basic_validate($form, $form_state);  
 
-  // Let's now pass it through all of our custom validators, if there are any.
-  foreach ($validate_handlers as $validate_callback) {         
-    if (function_exists($validate_callback)) {
-      call_user_func_array($validate_callback, array(&$form, &$form_state));
+  if (!form_has_errors()) {
+    // Let's now pass it through all of our custom validators, if there are any.
+    foreach ($validate_handlers as $validate_callback) {         
+      if (function_exists($validate_callback)) {
+        call_user_func_array($validate_callback, array(&$form, &$form_state));
+      }
     }
   }
-
-
 
   if (!form_has_errors()) {
     // No errors from the validate, so let's continue.
@@ -918,12 +918,14 @@ function system_login_form() {
     "label" => t("User:"),
     "type" => "textfield",
     "size" => 30,
+    "required" => TRUE,
   );
   
   $form["password"] = array(
     "label" => t("Password:"),
     "type" => "password",
     "size" => 30,
+    "required" => TRUE,
   );
   
   $form["submit"] = array(
